# smotret-anime_api

./: CMakeLists.txt
include/: smotret-anime_api.h
src/: smotret-anime_api.cpp
